update README, del useless code

--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -52,8 +52,8 @@
         "!mv \"/content/AbyssOrangeMix3A3.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "!curl -Lo cetusMix_Version35.safetensors https://huggingface.co/ckpt/cetus-mix/resolve/main/cetusMix_Version35.safetensors\n",
         "!mv \"/content/cetusMix_Version35.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "!curl -Lo cetusMix_Version35.safetensors https://huggingface.co/Meina/MeinaMix/resolve/main/Meina%20V8%20pruned.safetensors\n",
-        "!mv \"/content/cetusMix_Version35.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "!curl -Lo Meina%20V8%20pruned.safetensors https://huggingface.co/Meina/MeinaMix/resolve/main/Meina%20V8%20pruned.safetensors\n",
+        "!mv \"/content/Meina%20V8%20pruned.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
         "# ControlNet\n",
         "!git clone https://github.com/Mikubill/sd-webui-controlnet /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
@@ -77,22 +77,6 @@
         "# !mv \"/content/control_scribble_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "# !curl -Lo control_seg_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_seg-fp16.safetensors\n",
         "# !mv \"/content/control_seg_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "\n",
-        "# ControlNet Other Models\n",
-        "# !curl -Lo hand_pose_model.pth https://huggingface.co/ckpt/ControlNet/resolve/main/hand_pose_model.pth\n",
-        "# !mv \"/content/hand_pose_model.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/openpose\"\n",
-        "# !curl -Lo body_pose_model.pth https://huggingface.co/ckpt/ControlNet/resolve/main/body_pose_model.pth\n",
-        "# !mv \"/content/body_pose_model.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/openpose\"\n",
-        "# !curl -Lo dpt_hybrid_midas_501f0c75.pt https://huggingface.co/ckpt/ControlNet/resolve/main/dpt_hybrid-midas-501f0c75.pt\n",
-        "# !mv \"/content/dpt_hybrid_midas_501f0c75.pt\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/midas\"\n",
-        "# !curl -Lo mlsd_large_512_fp32.pth https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_large_512_fp32.pth \n",
-        "# !mv \"/content/mlsd_large_512_fp32.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd\"\n",
-        "# !curl -Lo mlsd_tiny_512_fp32.pth https://huggingface.co/ckpt/ControlNet/resolve/main/mlsd_tiny_512_fp32.pth\n",
-        "# !mv \"/content/mlsd_tiny_512_fp32.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd\"\n",
-        "# !curl -Lo network_bsds500.pth https://huggingface.co/ckpt/ControlNet/resolve/main/network-bsds500.pth\n",
-        "# !mv \"/content/network_bsds500.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/hed\"\n",
-        "# !curl -Lo upernet_global_small.pth https://huggingface.co/ckpt/ControlNet/resolve/main/upernet_global_small.pth\n",
-        "# !mv \"/content/upernet_global_small.pth\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/uniformer\"\n",
         "\n",
         "%cd /content/stable-diffusion-webui"
       ]
