--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fz3DPAivC2Xa"
@@ -14,6 +15,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0z7It4OAEjcF"
@@ -23,6 +25,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "NgZ7w-jaElMC"
@@ -60,23 +63,23 @@
         "# Posex for ControlNet\n",
         "!git clone https://github.com/hnmr293/posex /content/stable-diffusion-webui/extensions/posex\n",
         "\n",
-        "# ControlNet Hot Models\n",
-        "!curl -Lo control_canny_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_canny-fp16.safetensors\n",
-        "!mv \"/content/control_canny_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "!curl -Lo control_depth_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_depth-fp16.safetensors \n",
-        "!mv \"/content/control_depth_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "!curl -Lo control_hed_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_hed-fp16.safetensors \n",
-        "!mv \"/content/control_hed_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_mlsd_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_mlsd-fp16.safetensors\n",
-        "# !mv \"/content/control_mlsd_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_normal_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_normal-fp16.safetensors\n",
-        "# !mv \"/content/control_normal_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "!curl -Lo control_openpose_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_openpose-fp16.safetensors\n",
-        "!mv \"/content/control_openpose_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_scribble_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_scribble-fp16.safetensors\n",
-        "# !mv \"/content/control_scribble_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_seg_fp16.safetensors https://huggingface.co/ckpt/ControlNet/resolve/main/control_seg-fp16.safetensors\n",
-        "# !mv \"/content/control_seg_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# ControlNet Models\n",
+        "# !curl -Lo control_v11p_sd15_canny.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny.pth\n",
+        "# !mv \"/content/control_v11p_sd15_canny.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11f1p_sd15_depth.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth.pth\n",
+        "# !mv \"/content/control_v11f1p_sd15_depth.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_hed.safetensors https://huggingface.co/lllyasviel/sd-controlnet-hed/resolve/main/diffusion_pytorch_model.bin\n",
+        "# !mv \"/content/control_hed.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_mlsd.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd.pth\n",
+        "# !mv \"/content/control_v11p_sd15_mlsd.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_normalbae.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae.pth\n",
+        "# !mv \"/content/control_v11p_sd15_normalbae.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "!curl -Lo control_v11p_sd15_openpose.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose.pth\n",
+        "!mv \"/content/control_v11p_sd15_openpose.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_scribble.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble.pth\n",
+        "# !mv \"/content/control_v11p_sd15_scribble.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_seg.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg.pth\n",
+        "# !mv \"/content/control_v11p_sd15_seg.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "\n",
         "%cd /content/stable-diffusion-webui"
       ]
