--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -64,22 +64,24 @@
         "!git clone https://github.com/hnmr293/posex /content/stable-diffusion-webui/extensions/posex\n",
         "\n",
         "# ControlNet Models\n",
-        "# !curl -Lo control_v11p_sd15_canny.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny.pth\n",
-        "# !mv \"/content/control_v11p_sd15_canny.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11f1p_sd15_depth.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth.pth\n",
-        "# !mv \"/content/control_v11f1p_sd15_depth.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# V1.1\n",
+        "# !curl -Lo control_v11p_sd15_canny_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny_fp16.safetensors\n",
+        "# !mv \"/content/control_v11p_sd15_canny_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11f1p_sd15_depth_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth_fp16.safetensors\n",
+        "# !mv \"/content/control_v11f1p_sd15_depth_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_mlsd_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd_fp16.safetensors\n",
+        "# !mv \"/content/control_v11p_sd15_mlsd_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_normalbae_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae_fp16.safetensors\n",
+        "# !mv \"/content/control_v11p_sd15_normalbae_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "!curl -Lo control_v11p_sd15_openpose_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose_fp16.safetensors\n",
+        "!mv \"/content/control_v11p_sd15_openpose_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_scribble_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble_fp16.safetensors\n",
+        "# !mv \"/content/control_v11p_sd15_scribble_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# !curl -Lo control_v11p_sd15_seg_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg_fp16.safetensors\n",
+        "# !mv \"/content/control_v11p_sd15_seg_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "# V1.0\n",
         "# !curl -Lo control_hed.safetensors https://huggingface.co/lllyasviel/sd-controlnet-hed/resolve/main/diffusion_pytorch_model.bin\n",
         "# !mv \"/content/control_hed.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11p_sd15_mlsd.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd.pth\n",
-        "# !mv \"/content/control_v11p_sd15_mlsd.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11p_sd15_normalbae.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae.pth\n",
-        "# !mv \"/content/control_v11p_sd15_normalbae.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "!curl -Lo control_v11p_sd15_openpose.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose.pth\n",
-        "!mv \"/content/control_v11p_sd15_openpose.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11p_sd15_scribble.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble.pth\n",
-        "# !mv \"/content/control_v11p_sd15_scribble.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11p_sd15_seg.safetensors https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg.pth\n",
-        "# !mv \"/content/control_v11p_sd15_seg.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "\n",
         "%cd /content/stable-diffusion-webui"
       ]
