add git checkout

--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -83,7 +83,8 @@
         "# !curl -Lo control_hed.safetensors https://huggingface.co/lllyasviel/sd-controlnet-hed/resolve/main/diffusion_pytorch_model.bin\n",
         "# !mv \"/content/control_hed.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "\n",
-        "%cd /content/stable-diffusion-webui"
+        "%cd /content/stable-diffusion-webui\n",
+        "!git checkout 91c8d0d"
       ]
     },
     {
