--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -65,12 +65,12 @@
         "\n",
         "# ControlNet Models\n",
         "# V1.1\n",
-        "# !curl -Lo control_v11p_sd15_canny_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny_fp16.safetensors\n",
-        "# !mv \"/content/control_v11p_sd15_canny_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "!curl -Lo control_v11p_sd15_canny_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny_fp16.safetensors\n",
+        "!mv \"/content/control_v11p_sd15_canny_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "# !curl -Lo control_v11f1p_sd15_depth_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth_fp16.safetensors\n",
         "# !mv \"/content/control_v11f1p_sd15_depth_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# !curl -Lo control_v11p_sd15_mlsd_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd_fp16.safetensors\n",
-        "# !mv \"/content/control_v11p_sd15_mlsd_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "!curl -Lo control_v11p_sd15_mlsd_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd_fp16.safetensors\n",
+        "!mv \"/content/control_v11p_sd15_mlsd_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "# !curl -Lo control_v11p_sd15_normalbae_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae_fp16.safetensors\n",
         "# !mv \"/content/control_v11p_sd15_normalbae_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "!curl -Lo control_v11p_sd15_openpose_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose_fp16.safetensors\n",
@@ -79,11 +79,10 @@
         "# !mv \"/content/control_v11p_sd15_scribble_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "# !curl -Lo control_v11p_sd15_seg_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg_fp16.safetensors\n",
         "# !mv \"/content/control_v11p_sd15_seg_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
-        "# V1.0\n",
-        "# !curl -Lo control_hed.safetensors https://huggingface.co/lllyasviel/sd-controlnet-hed/resolve/main/diffusion_pytorch_model.bin\n",
-        "# !mv \"/content/control_hed.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
+        "!curl -Lo control_v11p_sd15s2_lineart_anime_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime_fp16.safetensors\n",
+        "!mv \"/content/control_v11p_sd15s2_lineart_anime_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "\n",
-        "%cd /content/stable-diffusion-webui\n"
+        "%cd /content/stable-diffusion-webui"
       ]
     },
     {
