--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -82,7 +82,8 @@
         "!curl -Lo control_v11p_sd15s2_lineart_anime_fp16.safetensors https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime_fp16.safetensors\n",
         "!mv \"/content/control_v11p_sd15s2_lineart_anime_fp16.safetensors\" \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/models\"\n",
         "\n",
-        "%cd /content/stable-diffusion-webui"
+        "%cd /content/stable-diffusion-webui\n",
+        "!git checkout 91c8d0d"
       ]
     },
     {
@@ -101,7 +102,6 @@
         "\n",
         "# GPU required\n",
         "!COMMANDLINE_ARGS=\"--share --disable-safe-unpickle --no-half-vae --xformers --reinstall-xformers --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py\n",
-        "\n",
         "# No GPU required\n",
         "# !COMMANDLINE_ARGS=\"--share --disable-safe-unpickle --skip-torch-cuda-test --no-half --use-cpu all --enable-insecure-extension-access\" REQS_FILE=\"requirements.txt\" python launch.py"
       ]
