--- a/stable_diffusion_webui_colab.ipynb
+++ b/stable_diffusion_webui_colab.ipynb
@@ -47,16 +47,16 @@
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "\n",
-        "!curl -Lo MeinaPastelV3.safetensors https://huggingface.co/Meina/MeinaPastel/resolve/main/MeinaPastelV3%20-%20Without%20VAE.safetensors\n",
-        "!mv \"/content/MeinaPastelV3.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "!curl -Lo Counterfeit-V2.5_pruned.safetensors https://huggingface.co/gsdf/Counterfeit-V2.5/resolve/main/Counterfeit-V2.5_pruned.safetensors\n",
-        "!mv \"/content/Counterfeit-V2.5_pruned.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "!curl -Lo AbyssOrangeMix3A3.safetensors https://huggingface.co/sakistriker/AbyssOrangeMix3A3/resolve/main/AOM3A3.safetensors\n",
-        "!mv \"/content/AbyssOrangeMix3A3.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "!curl -Lo MeinaPastelV5.safetensors https://huggingface.co/Meina/MeinaPastel/resolve/main/MeinaPastelV5%20-%20Without%20VAE.safetensors\n",
+        "!mv \"/content/MeinaPastelV5.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "!curl -Lo CounterfeitV3.safetensors https://huggingface.co/gsdf/Counterfeit-V3.0/resolve/main/Counterfeit-V3.0_fp16.safetensors\n",
+        "!mv \"/content/CounterfeitV3.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "!curl -Lo AOM3A3_orangemixs.safetensors https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A3_orangemixs.safetensors\n",
+        "!mv \"/content/AOM3A3_orangemixs.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "!curl -Lo cetusMix_Version35.safetensors https://huggingface.co/ckpt/cetus-mix/resolve/main/cetusMix_Version35.safetensors\n",
         "!mv \"/content/cetusMix_Version35.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
-        "!curl -Lo Meina%20V8%20pruned.safetensors https://huggingface.co/Meina/MeinaMix/resolve/main/Meina%20V8%20pruned.safetensors\n",
-        "!mv \"/content/Meina%20V8%20pruned.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "!curl -Lo MeinaV8.safetensors https://huggingface.co/Meina/MeinaMix/resolve/main/Meina%20V8%20pruned.safetensors\n",
+        "!mv \"/content/MeinaV8.safetensors\" \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
         "# ControlNet\n",
         "!git clone https://github.com/Mikubill/sd-webui-controlnet /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
